--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -21,14 +21,14 @@
 # Amanpreet Singh Alam <aalam@users.sf.net>, 2008, 2009.
 # Amanpreet Singh Alam[ਆਲਮ] <amanpreetalam@yahoo.com>, 2005.
 # A S Alam <aalam@users.sf.net>, 2009, 2012, 2014, 2017.
-# Aman ALam <alam.yellow@gmail.com>, 2018, 2019, 2020.
+# Aman Alam <alam.yellow@gmail.com>, 2018, 2019, 2020, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2020-10-15 04:26+0000\n"
-"Last-Translator: Aman ALam <alam.yellow@gmail.com>\n"
+"PO-Revision-Date: 2023-09-03 10:42+0000\n"
+"Last-Translator: Aman Alam <aalam@users.noreply.hosted.weblate.org>\n"
 "Language-Team: Punjabi <punjabi-users@lists.sf.net>\n"
 "Language: pa\n"
 "MIME-Version: 1.0\n"
@@ -520,30 +520,22 @@ msgstr "ਮਿਰੱਰ ਸਕੈਨ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ..."
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid "Use non-free software?"
 msgid "Use non-free firmware?"
-msgstr "ਗ਼ੈਰ-ਮੁਕਤ/ਮੁਫਤ ਸਾਫਟਵੇਅਰਾਂ ਦੀ ਵਰਤੋਂ?"
+msgstr "ਗ਼ੈਰ-ਮੁਕਤ ਫ਼ਿਰਮਵੇਅਰ ਵਰਤਣਾ ਹੈ?"
 
 #. Type: boolean
 #. Description
 #. :sl5:
 #: ../apt-mirror-setup.templates:2001
-#, fuzzy
-#| msgid ""
-#| "Some non-free software has been made to work with Debian. Though this "
-#| "software is not at all a part of Debian, standard Debian tools can be "
-#| "used to install it. This software has varying licenses which may prevent "
-#| "you from using, modifying, or sharing it."
 msgid ""
 "Some non-free firmware has been made to work with Debian. Though this "
 "firmware is not at all a part of Debian, standard Debian tools can be used "
 "to install it. This firmware has varying licenses which may prevent you from "
 "using, modifying, or sharing it."
 msgstr ""
-"ਕੁਝ ਨਾ-ਮੁਕਤ/ਮੁਫ਼ਤ ਸਾਫਟਵੇਅਰ ਡੇਬੀਅਨ ਨਾਲ ਵਰਤਣ ਲਈ ਬਣਾਏ ਹਨ। ਭਾਵੇਂ ਇਹ ਸਾਫਟਵੇਅਰ ਡੇਬੀਅਨ ਦਾ ਭਾਗ "
-"ਨਹੀਂ, ਸਟੈਂਡਰਡ ਡੇਬੀਅਨ ਟੂਲ ਇਸ ਨੂੰ ਇੰਸਟਾਲ ਕਰਨ ਲਈ ਵਰਤੇ ਜਾ ਸਕਦੇ ਹਨ। ਇਸ ਸਾਫਟਵੇਅਰ ਦਾ ਵੱਖਰਾ "
-"ਲਾਈਸੈਂਸ ਹੈ ਜੋ ਤੁਹਾਨੂੰ ਵਰਤਣ, ਤਬਦੀਲ ਕਰਨ, ਜਾਂ ਸਾਂਝਾ ਕਰਨ ਤੋਂ ਹਟਾ ਸਕਦਾ ਹੈ।"
+"ਕੁਝ ਨਾ-ਮੁਕਤ ਫ਼ਿਰਮਵੇਅਰ ਡੇਬੀਅਨ ਨਾਲ ਵਰਤਣ ਲਈ ਬਣਾਏ ਹਨ। ਭਾਵੇਂ ਇਹ ਫ਼ਿਰਮਵੇਅਰ ਡੇਬੀਅਨ ਦਾ ਭਾਗ "
+"ਨਹੀਂ, ਸਟੈਂਡਰਡ ਡੇਬੀਅਨ ਟੂਲ ਇਸ ਨੂੰ ਇੰਸਟਾਲ ਕਰਨ ਲਈ ਵਰਤੇ ਜਾ ਸਕਦੇ ਹਨ। ਇਸ ਫ਼ਿਰਮਵੇਅਰ ਦਾ ਵੱਖਰਾ ਲਸੰਸ "
+"ਹੈ ਜੋ ਤੁਹਾਨੂੰ ਵਰਤਣ, ਤਬਦੀਲ ਕਰਨ, ਜਾਂ ਸਾਂਝਾ ਕਰਨ ਤੋਂ ਹਟਾ ਸਕਦਾ ਹੈ।"
 
 #. Type: boolean
 #. Description
