--- a/debian/po/tr.po
+++ b/debian/po/tr.po
@@ -31,14 +31,14 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: apt-setup@packages.debian.org\n"
 "POT-Creation-Date: 2023-01-23 20:01+0000\n"
-"PO-Revision-Date: 2023-05-10 11:52+0300\n"
+"PO-Revision-Date: 2023-07-05 19:50+0000\n"
 "Last-Translator: Fatih Altun <fatih.altun@pardus.org.tr>\n"
 "Language-Team: Debian L10N Turkish\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. Type: text
 #. Description
@@ -243,7 +243,7 @@ msgstr ""
 "Sürüm güncellemeleri, görece sık değişen ve en son sürümünün kullanılmaması "
 "halinde yararı azalan yazılımların daha güncel sürümlerini sağlamaktadır. "
 "Sürüm güncellemeleri aynı zamanda gerileme hatalarının düzeltmelerini de "
-"sağlar.  Bu hizmet yalnızca kararlı ve eskikararlı sürümler için mevcuttur."
+"sağlar. Bu hizmet yalnızca kararlı ve eski kararlı sürümler için mevcuttur."
 
 #. Type: multiselect
 #. Description
@@ -802,7 +802,7 @@ msgid ""
 msgstr ""
 "Canonical'ın \"partner\" arşivinde bazı ek yazılımlar vardır. Bu yazılımlar "
 "Ubuntu'nun bir parçası olmamakla birlikte Ubuntu kullanıcılarına bir hizmet "
-"olarak  Canonical ve ilgili sağlayıcılar tarafından sunulurlar."
+"olarak Canonical ve ilgili sağlayıcılar tarafından sunulurlar."
 
 #. Type: boolean
 #. Description
